<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/homepage"
            android:title="@string/homepage"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history"
            />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite"
            />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting"
            />
        <item
            android:id="@+id/nav_quit"
            android:icon="@drawable/quit"
            android:title="@string/quit"
            />
    </group>
</menu>